--- a/pages/tools/sentro.mdx
+++ b/pages/tools/sentro.mdx
@@ -13,11 +13,11 @@ import { SiGithub } from "@icons-pack/react-simple-icons";
 import PreviewImage from "../../components/markdown/PreviewImage";
 
 export const metadata = {
-  title: 'Hashi',
-  description: 'Dev Protocol\'s design system for building bridges from software to user.',
+  title: 'Sentro',
+  description: 'A low-level SCSS library for building and managing token-driven design systems.',
 }
 
-export const ToolInfo = tools.filter(tool => tool.name === 'Hashi')[0];
+export const ToolInfo = tools.filter(tool => tool.name === metadata.title)[0];
 
 <MSAnimatedSection>
   # { metadata.title }
@@ -28,12 +28,10 @@ export const ToolInfo = tools.filter(tool => tool.name === 'Hashi')[0];
 
 <MSAnimatedSection delay={0.4}>
   <div className="w-full h-full max-h-md r-lg my-md" style={{ overflow: 'hidden'}}>
-    <PreviewImage src="/img/hashi/hashi-cover.webp" alt="Hashi's cover image." />
+    <PreviewImage src="/img/sentro/sentro.webp" alt="Sentro's cover image." />
   </div>
 
-  Hashi is Dev Protocol's design system. Aiming to bring a unified user experience when using Dev Protocol products, to present an elegant user interface for consumers to interact with, and to be able to create the same user interfaces regardless of any frontend framework. It powers most of the experiences in the Dev Protocol ecosystem including but not limited to: the [Dev Protocol website](https://devprotocol.xyz), [Clubs](https://clubs.place), [Niwa](https://niwa.xyz), and many more products.
-
-  It boasts a wide range of utilities, scalable component architecture, great API and developer experience, and the ability to scale the design system based on the product's own design needs. It gives you the ability to customize the global and component-level themes, create layouts, build specialized components and layouts, and more without compromise.
+  Sentro is a low-level library for building token-driven design systems. It features token and key management, a way to create themeable and scalable components, helpful tools to improve the developer experiece, a way to manage themes, and create consistent and maintainable design systems.
 </MSAnimatedSection>
 
 <MSAnimatedSection className="grid cols-1 @large:cols-3 gap-md mt-4xl">
@@ -41,14 +39,13 @@ export const ToolInfo = tools.filter(tool => tool.name === 'Hashi')[0];
     <MSTitleBar clsssName="jc-center" icon={<QuestionMarkCircleIcon />}>Info</MSTitleBar>
     <div className="w-full start-1 end-1 fill-surface-400 ink-surface-ink p-lg r-md raise-low mt-md" style={{ height: 'max-content' }}>
       <ul className="ms-list mb-md">
-        <li className="ms-list__item">Client: **[Dev Protocol](https://devprotocol.xyz)**</li>
+        <li className="ms-list__item">Client: **Matteu**</li>
         <li className="ms-list__item">Status: **{ ToolInfo.status }**</li>
         <li className="ms-list__item mt-sm">{ ToolInfo.tags.map((item, i) => <MSTag key={ i } label={ item }/>) }</li>
       </ul>
       #### Links
       <div className="flex flow-row flow-nowrap jc-start gap-sm mt-sm">
         <MSButton link={ToolInfo.links['docs']} icon={['left', <BookOpenIcon />]} type="small filled">Docs</MSButton>
-        <MSButton link={ToolInfo.links['figma']} icon={['left', <PaintBrushIcon />]} type="small filled">Figma</MSButton>
         <MSButton link={ToolInfo.links['src']} icon={['left', <SiGithub />]} type="small filled">Source</MSButton>
       </div>
     </div>
@@ -56,15 +53,14 @@ export const ToolInfo = tools.filter(tool => tool.name === 'Hashi')[0];
   <MSAnimatedSection delay={0.3} className="start-1 end-1 @large:start-2 @large:end-4">
     <MSTitleBar clsssName="jc-center" icon={<PhotoIcon />}>Media</MSTitleBar>
     <div className="w-full grid cols-1 gap-md mt-md">
-      <PreviewImage src="/img/hashi.webp" alt="A screen capture of Hashi's website" />
-      <PreviewImage src="/img/hashi/hashi-cover--dark.webp" alt="Hashi's cover image but in dark mode." />
+      <PreviewImage src="/img/sentro/sentro-sample-code.webp" alt="A design system using Sentro as its core." />
     </div>
   </MSAnimatedSection>
 </MSAnimatedSection>
 
 export default function ToolPage({ children }) {
   return (
-    <DefaultLayout title={metadata.title} description={metadata.description} previewImage="/img/hashi/hashi-cover.webp">
+    <DefaultLayout title={metadata.title} description={metadata.description} previewImage="/img/sentro/sentro.webp">
       <section className="py-4xl">
         <MSButton style={{ position: 'relative', left: '-0.9rem', marginBottom: '0.7rem' }} link="/tools" type="small" icon={['left', <ArrowLeftIcon />]}>Back to all tools</MSButton>
         {children}
