--- a/pages/work/purple-cress.mdx
+++ b/pages/work/purple-cress.mdx
@@ -29,7 +29,7 @@ export const WorkInfo = works.filter(item => item.name === metadata.title)[0];
     <PreviewImage src="/img/purplecress.webp" alt="Purple Cress' website." />
   </div>
 
-  Purple Cress was a Japanese manga scanlation group. Their scanlation work is diverse. From one-shots, to short form series, to the larger serialized series.
+  Purple Cress was a Japanese manga scanlation group. Their scanlation work is diverse. From one-shots, to short form series, to the larger serialized series. It boasts an in-house built manga reader with basic accessibility features, a beautiful UI to navigate the scanlation's portfolio, and an admin panel to manage the content published.
 </MSAnimatedSection>
 
 <MSAnimatedSection className="grid cols-1 @large:cols-3 gap-md mt-4xl">
@@ -58,7 +58,7 @@ export const WorkInfo = works.filter(item => item.name === metadata.title)[0];
 
 export default function WorkPage({ children }) {
   return (
-    <DefaultLayout title={metadata.title} description={metadata.description} previewImage="/img/hashi/hashi-cover.webp">
+    <DefaultLayout title={metadata.title} description={metadata.description} previewImage="/img/purplecress.webp">
       <section className="py-4xl">
         <MSButton style={{ position: 'relative', left: '-0.9rem', marginBottom: '0.7rem' }} link="/work" type="small" icon={['left', <ArrowLeftIcon />]}>Back to all work</MSButton>
         {children}
